CHORE: gitignore 추가, application.yml 수정

--- a/나나/court/src/main/resources/application.properties
+++ b/나나/court/src/main/resources/application.properties
@@ -1,14 +1,31 @@
 # server
 server.port=8080
 
-# jpa common
-spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.generate-ddl=true
+spring:
+    datasource:
+        driver-class-name: com.mysql.cj.jdbc.Driver
+        url: jdbc:mysql://localhost:3306/test?useSSL=false&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
+        username: naryeong
+        password: naryeong
 
-# jpa mysql
-spring.jpa.database=mysql
-spring.datasource.url=jdbc:mysql://localhost:3306/test?useUnicode=true&serverTimezone=Asia/Seoul
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.username=naryeong
-spring.datasource.password=naryeong
+
+jpa:
+    open-in-view: true
+    hibernate:
+        ddl-auto: create
+        naming:
+            physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+        use-new-id-generator-mappings: false
+    show-sql: true
+    properties:
+        hibernate.format_sql: true
+        dialect: org.hibernate.dialect.MySQL5InnoDBDialect
+
+
+# ?? ?? ??
+logging:
+    level:
+        # hibernate ? ??? ?? ??? debug??? ??
+        # jpa hibernate? ???? sql? ??? ??? ???? ?? ??
+        org.hibernate.SQL: debug
+        org.hibernate.type: trace # ?? ???? ????? ???? ??
