--- a/프로젝트_지니/JdbcTemplate/build.gradle
+++ b/프로젝트_지니/JdbcTemplate/build.gradle
@@ -33,6 +33,11 @@ dependencies {
     implementation group: 'org.springdoc', name: 'springdoc-openapi-ui', version: '1.6.12'
     testImplementation group: 'org.springdoc', name: 'springdoc-openapi-webmvc-core', version: '1.6.12'
 
+    //jwt
+    implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.5'
+    runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.5'
+    runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.5'
+
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
