--- a/나나/court/src/main/resources/application.properties
+++ b/나나/court/src/main/resources/application.properties
@@ -1,31 +1,23 @@
 # server
 server.port=8080
 
-spring:
-    datasource:
-        driver-class-name: com.mysql.cj.jdbc.Driver
-        url: jdbc:mysql://localhost:3306/test?useSSL=false&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
-        username: naryeong
-        password: naryeong
+# Database Settings
+#spring.datasource.url=jdbc:mysql://localhost:3306/test?useSSL=false&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
+#spring.datasource.username=naryeong
+#spring.datasource.password=naryeong
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+#spring.datasource.tomcat.testOnBorrow=true
+#spring.datasource.tomcat.validationQuery=SELECT 1
+
+# JPA
+# ???? ?? ? ???? DDL(create, alter, drop)? ??? ??? ???? ??
+spring.jpa.hibernate.ddl-auto=update
+# ? JPA? ???? hibernate? ????? ???? SQL? ????? ??. ???? SQL? ???? ???.
+spring.jpa.properties.hibernate.format_sql=true
+# JPA?? ? ???? SQL? ??? ??? ??
+spring.jpa.show-sql=true
 
 
-jpa:
-    open-in-view: true
-    hibernate:
-        ddl-auto: create
-        naming:
-            physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-        use-new-id-generator-mappings: false
-    show-sql: true
-    properties:
-        hibernate.format_sql: true
-        dialect: org.hibernate.dialect.MySQL5InnoDBDialect
-
-
-# ?? ?? ??
-logging:
-    level:
-        # hibernate ? ??? ?? ??? debug??? ??
-        # jpa hibernate? ???? sql? ??? ??? ???? ?? ??
-        org.hibernate.SQL: debug
-        org.hibernate.type: trace # ?? ???? ????? ???? ??
+logging.level.org.springframework=debug
+logging.level.org.springframework.web=debug
